[package]
name = "rldd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Print shared object dependencies"
repository = "https://github.com/zatrazz/rldd/"

[dependencies]
object = "0.29.0"
memmap2 = "0.5.7"
glob = "0.3.0"
termcolor = "1.1.3"
argparse = "0.2.2"

[dev-dependencies]
tempfile = "3.3.0"
