[package]
name = "rldd"
version = "0.1.0"
authors = "Adhemerval Zanella <zatrazz@gmail.com>"
edition = "2021"
license = "MIT"
description = "Print shared object dependencies"
repository = "https://github.com/zatrazz/rldd/"

[dependencies]
# There is no need for compression.
object = { version = "0.29.0", default-features = false, features = [ "read" ] }
memmap2 = "0.5.7"
glob = "0.3.0"
termcolor = "1.1.3"
argparse = "0.2.2"

[dev-dependencies]
tempfile = "3.3.0"
