[package]
name = "rldd"
version = "0.2.0"
authors = [ "Adhemerval Zanella <zatrazz@gmail.com>" ]
edition = "2021"
license = "MIT"
description = """
A program to print shared object dependencies
"""
repository = "https://github.com/zatrazz/rldd/"
homepage = "https://github.com/zatrazz/rldd/"
readme = "README.md"
keywords = ["elf", "mach-o", "cli", "linux", ]
categories = ["command-line-utilities"]
exclude = [
    "TODO.md",
    "doc/screenshot.png",
]

[dependencies]
# There is no need for compression.
object = { version = "0.29.0", default-features = false, features = [ "read" ] }
memmap2 = "0.5.7"
glob = "0.3.0"
termcolor = "1.1.3"
argh = "0.1.9"

[target.'cfg(any(target_os = "macos", target_os = "android"))'.dependencies]
libc = "0.2.138"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "10.6.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
# Defaultimproves compile times, but prevents some optimizations.
codegen-units = 1
# Remove stack unwinder and backtrace.
panic = "abort"
